<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home_bg"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context="tech.hsecmobile.quizzstar.Activity.InstructionsActivity"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/instructions_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        app:titleTextColor="#ffffff"
        app:subtitleTextColor="#ffffff"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:elevation="0dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:nestedScrollingEnabled="false"
        android:layout_below="@id/instructions_toolbar"
        android:background="@color/home_bg"
        android:fillViewport="true"
        android:scrollbars="none"
        android:id="@+id/instructions_scroll"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_height="match_parent">
            <View
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/home_design"/>
            <LinearLayout
                android:id="@+id/linear_layout_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/home_banner"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_instructions_title"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/linear_layout_2"
                android:layout_below="@id/linear_layout_1"
                android:orientation="vertical"
                android:layout_margin="15dp"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:src="@drawable/instructions"/>
                <TextView
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:text="@string/fragment_instructions_1"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/tv2"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginBottom="10dp"
                    android:text="@string/fragment_instructions_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginBottom="10dp"
                    android:text="@string/fragment_instructions_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginBottom="10dp"
                    android:text="@string/fragment_instructions_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginBottom="10dp"
                    android:text="@string/fragment_instructions_5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/tv6"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginBottom="10dp"
                    android:text="@string/fragment_instructions_6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginBottom="10dp"
                    android:text="@string/fragment_instructions_7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginBottom="10dp"
                    android:text="@string/fragment_instructions_8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginBottom="10dp"
                    android:text="@string/fragment_instructions_9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/tv10"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginBottom="10dp"
                    android:text="@string/fragment_instructions_10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:text="@string/fragment_instructions_11"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="20dp"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>