<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:nestedScrollingEnabled="false"
    android:fillViewport="true"
    android:background="@color/home_bg"
    tools:context="tech.hsecmobile.quizzstar.Activity.VerifyRegistrationByEmail"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:gravity="center">

        <ImageView
            android:id="@+id/verify_image"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/verification" />

        <TextView
            android:id="@+id/verify_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/verify_image"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/verify_accouunt"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/verify_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/verify_title"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/verify_account_message"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/verify_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/verify_subtitle"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/text_background"
            android:backgroundTint="@color/home_bg"
            android:hint="@string/verification_code"
            android:nextFocusDown="@+id/email"
            android:paddingLeft="15dp"
            android:inputType="number"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <Button
            android:id="@+id/verify_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/verify_code"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/text_background"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/verify"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>
</ScrollView>