<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="tech.hsecmobile.quizzstar.Activity.PermissionActivity">
    <TextView
        android:id="@+id/text1_slide1"
        android:layout_marginTop="40dp"
        android:layout_alignParentTop="true"
        android:textSize="26sp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/permissions_title" />
    <ImageView
        android:layout_below="@id/text1_slide1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="80dp"
        android:layout_above="@id/need_permissions"
        android:gravity="center"
        android:contentDescription="@string/permissions_btn"
        android:src="@drawable/ic_shield"/>
    <TextView
        android:id="@+id/need_permissions"
        android:textSize="16sp"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_above="@id/permissions_linear"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/permissions_description"/>
    <LinearLayout
        android:id="@+id/permissions_linear"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/allow_permissions_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:background="@drawable/button_radius"
            android:textColor="@color/white"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            style="?android:attr/borderlessButtonStyle"
            android:layout_marginBottom="20dp"
            android:text="@string/permissions_btn"/>
    </LinearLayout>
</RelativeLayout>